<resources>
    <string name="app_name">WeatherApp</string>
    <string name="cairo">Cairo</string>
    <string name="_11">11</string>
    <string name="cloudy">Cloudy</string>
    <string name="_20km_h">20km/h</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="location_text">Cairo</string>
    <string name="_3_day_forecast">3-day Forecast</string>
    <string name="today">Today</string>

</resources>